# entropypf

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/entropypf/: __init__.py  entropypf.py
tests/: test_entropypf.py
