[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "entropypf"
version = "0.1.0"
authors = [
    { name = "Juan David Aparicio", email = "juandaparicio2809@gmail.com" },
]
description = "Fast entropy-based period finder for unevenly sampled astronomical time series"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/juand4g/entropypf"
Issues = "https://github.com/juand4g/entropypf/issues"
